--- a/helm-nginx/templates/ingress.yaml
+++ b/helm-nginx/templates/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: {{ .Values.path }}
         pathType: Prefix
         backend:
           service:
