--- a/helm-nginx/templates/ingress.yaml
+++ b/helm-nginx/templates/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
     octavia.ingress.kubernetes.io/internal: "false"
 spec:
   rules:
-  - host: foo.bar.com 
-    http:
+  - http:
       paths:
       - path: {{ .Values.path }}
         pathType: Prefix
