--- a/helm-nginx/templates/service.yaml
+++ b/helm-nginx/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.container.name }}-service
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.container.name }}
 spec:
